// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`translate-test.js should translate new jsfbt payload with option={"jenkins":false,"hashModule":false}: should translate string with enum 1`] = `
Array [
  Object {
    "fb-locale": "fb_HX",
    "translatedPhrases": Array [
      Object {
        "LINK": "{name} \\u05e9\\u05dd",
        "PAGE": "{name} \\u05e9\\u05dd\\u05dd",
        "PHOTO": "{name} \\u05e9\\u05dd\\u05dd\\u05dd",
        "POST": "{name} \\u05e9\\u05dd\\u05dd\\u05dd\\u05dd",
        "VIDEO": "{name} \\u05e9\\u05dd\\u05dd\\u05dd\\u05dd\\u05dd",
      },
    ],
  },
]
`;

exports[`translate-test.js should translate new jsfbt payload with option={"jenkins":false,"hashModule":false}: should translate string with metadata entries that create no hidden variation. Note: this string was collected in RN mode. 1`] = `
Array [
  Object {
    "fb-locale": "fb_HX",
    "translatedPhrases": Array [
      Object {
        "*": "\\u05e9\\u05dd\\u05e9",
        "1": "\\u05e9\\u05dd\\u05e9\\u05dd",
        "2": "\\u05e9\\u05dd\\u05dd",
      },
    ],
  },
]
`;

exports[`translate-test.js should translate new jsfbt payload with option={"jenkins":false,"hashModule":false}: should translate string with no variation 1`] = `
Array [
  Object {
    "fb-locale": "fb_HX",
    "translatedPhrases": Array [
      "\\u05e9\\u05dd",
    ],
  },
]
`;

exports[`translate-test.js should translate new jsfbt payload with option={"jenkins":false,"hashModule":false}: should translate string with variations and inner strings 1`] = `
Array [
  Object {
    "fb-locale": "fb_HX",
    "translatedPhrases": Array [
      Object {
        "*": Object {
          "*": "{name} \\u05e9\\u05d9\\u05ea\\u05e3/\\u05e9\\u05d9\\u05ea\\u05e4\\u05d4 \\u05d0\\u05d9\\u05ea\\u05da {=[number] photos}",
          "_1": "{name} \\u05e9\\u05d9\\u05ea\\u05e3/\\u05e9\\u05d9\\u05ea\\u05e4\\u05d4 \\u05d0\\u05d9\\u05ea\\u05da {=a photo}",
        },
        "1": Object {
          "*": "{name} \\u05e9\\u05d9\\u05ea\\u05e3 \\u05d0\\u05d9\\u05ea\\u05da {=[number] photos}",
          "_1": "{name} \\u05e9\\u05d9\\u05ea\\u05e3 \\u05d0\\u05d9\\u05ea\\u05da {=a photo}",
        },
        "2": Object {
          "*": "{name} \\u05e9\\u05d9\\u05ea\\u05e4\\u05d4 \\u05d0\\u05d9\\u05ea\\u05da {=[number] photos}",
          "_1": "{name} \\u05e9\\u05d9\\u05ea\\u05e4\\u05d4 \\u05d0\\u05d9\\u05ea\\u05da {=a photo}",
        },
      },
      Object {
        "*": Object {
          "*": "{number} \\u05ea\\u05de\\u05d5\\u05e0\\u05d5\\u05ea",
          "_1": "\\u05ea\\u05de\\u05d5\\u05e0\\u05d4",
        },
      },
    ],
  },
]
`;
